# hippo

./: .coverage  .env.example  .gitignore  .railwayignore  .ruff.toml  CLAUDE.md  Makefile  README.md  alembic.ini  db.py  example_with_logging.py  main.py  models.py  nixpacks.toml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-prod.txt  requirements.txt  schemas.py  test_api.py
.cursor/rules/: python.mdc
alembic/: env.py
alembic/versions/: 3872c9d26720_initial_vocabulary_tables.py  abd75b163d91_add_word_forms_table_for_inflections.py  f5079cc8f269_add_updated_at_to_words.py
api/: __init__.py  main.py  state.py
api/routes/: __init__.py  inference.py  mnist.py  network.py  vocabulary.py
api/routes/dictionary/: __init__.py  definitions.py  examples.py  relations.py  tags.py  words.py
api/services/: definition_service.py  example_service.py  relation_service.py  tag_service.py  word_service.py
api/utils/: __init__.py  error_handling.py  logger.py  pagination.py
db/: __init__.py  base.py
db/models/: __init__.py  dictionary.py  vocabulary.py
db/seeds/: __init__.py  seed_data.py  wicked_vocabulary.json
docs/: ARCHITECTURE.md  DEPLOYMENT.md  LEARNING.md  TRAINING.md  TRAINING_CONCEPTS.md  VOCABULARY_SCHEMA.md
hf_hub/: __init__.py  config.py  model_manager.py
logs/: training_20251113_201240.jsonl  training_20251113_202940.jsonl  training_20251113_203437.jsonl
neural_networks/: __init__.py  core.py  logged_network.py  mnist_loader.py  training_logger.py
notebooks/: analyze_training.ipynb
notebooks/.ipynb_checkpoints/: analyze_training-checkpoint.ipynb
schemas/: __init__.py  common.py  dictionary.py  inference.py  mnist.py  network.py  vocabulary.py
tests/: __init__.py  conftest.py  test_dictionary.py  test_health.py  test_inference.py
training/: README.md  __init__.py  cli_train.py  cli_upload.py  train.py  upload.py
